fix css error in interests section whereby overflow content was being hidden without scroll on desktop layout

--- a/src/style/AboutDetail.css
+++ b/src/style/AboutDetail.css
@@ -6,6 +6,7 @@
 
 .interests-parent-container {
   flex: 0.68;
+  position: relative;
   /* background-color: blue; */
   /* padding-bottom: 10px; */
   /* padding-top: 19px; */
